src/test/resources/public/input/typechecking/fail/incompatible_condition/fail01.jova
class Test{

}

class Main {

  public int main() {
    if("any dumb condition"){
      
    }
    return 0;
  }

}